# 1password-exporter

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json  onCreateCommand.sh  postAttachCommand.sh
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: ci.yaml  publish.yaml  release.yaml
examples/grafana-dashboard/: .env.example  README.md  dashboard.json  docker-compose.yaml
src/: command_executor.rs  main.rs  metrics_collector.rs  metrics_scraper.rs  op.rs  server.rs  testing.rs  utils.rs
src/metrics_collector/: account.rs  build_info.rs  document.rs  group.rs  item.rs  rate_limit.rs  service_account.rs  user.rs  vault.rs
src/metrics_scraper/: rate_limit.rs
tests/: expected_metrics.txt  integration_test.rs  mock_op.bash  test_helper.rs
tests/fixtures/: account.json  document.json  group.json  item.json  ratelimit.json  user.json  vault.json  whoami.json
