[package]
name = "onepassword-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.1"
clap = { version = "4.5.11", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
lazy_static = "1.5.0"
log = "0.4.22"
prometheus = "0.13.4"
regex = "1.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
simplelog = "0.12.2"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
mockall = "0.13.0"
reqwest = "0.12.5"
rstest = "0.21.0"
